# hil_odrive_ros2_control

./: .gitignore  README.md  VENDORED.md  controllers.yaml  motor_joint.urdf
config/: controllers.yaml
install/: local_setup.sh  setup.sh
install/hil_odrive_ros2_control/share/hil_odrive_ros2_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/odrive_ros2_control/share/odrive_ros2_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  odrive_hardware_interface.xml  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/odrive_velocity_pid/lib/odrive_velocity_pid/: velocity_pid_node
install/odrive_velocity_pid/share/odrive_velocity_pid/: local_setup.bash  local_setup.dsv  local_setup.sh  (+7 more)
launch/: motor_control.launch.py
log/: latest_build  latest_list
odrive_velocity_pid/: CMakeLists.txt  package.xml
odrive_velocity_pid/config/: controllers.yaml
odrive_velocity_pid/src/: velocity_pid_node.cpp
src/hil_odrive_ros2_control/: CMakeLists.txt  README.md  VENDORED.md
src/hil_odrive_ros2_control/config/: controllers.yaml
src/hil_odrive_ros2_control/launch/: motor_control.launch.py
src/odrive_base/: README.md
src/odrive_ros2_control/: README.md  odrive_hardware_interface.xml
src/odrive_ros2_control/src/: odrive_hardware_interface.cpp
src/odrive_velocity_pid/: CMakeLists.txt  README.md
src/odrive_velocity_pid/config/: controllers.yaml
src/odrive_velocity_pid/src/: velocity_pid_node.cpp
(+26 files in other folders)
